Figured out mobile spacing bug

--- a/source/stylesheets/cator_ruma.css
+++ b/source/stylesheets/cator_ruma.css
@@ -9,7 +9,6 @@
   font-weight: bold;
   text-align: left;
   margin-left: .5em;
-  border-bottom: 1px solid rgb(200, 200, 200); 
 }
 
 .bar {
@@ -376,6 +375,7 @@ body {
 }
 .company-name {
   font-size: 1.5em;
+  border-bottom: 1px solid rgb(200, 200, 200); 
 }
 }
 
@@ -392,6 +392,8 @@ body {
 .company-name {
   font-size: 2em;
   margin-right: 2em;
+  border-bottom: 1px solid rgb(200, 200, 200); 
+}
   body {
     padding-top: 97px;
 }
